@@ -28,16 +28,16 @@ global deffile;
 global cprintferror;  % temporary, because of JAVA errors in cat_io_cprintf ... 20160307
 %try clearvars -global deffile;  end %#ok<TRYNC>
 
+% start cat with different default file
+catdir = fileparts(mfilename('fullpath')); 
+catdef = fullfile(catdir,'cat_defaults.m');
+
 % check that CAT12 is installed in the correct folder
 pth = fileparts(mfilename('fullpath'));
 [pth2, nam]=fileparts(pth);
 if ~strcmp(nam,'cat12')
   spm('alert!',sprintf('Please check that you do not have multiple CAT12 installations in your path!\nYour current CAT12 version is installed in %s but should be installed in %s',pth,fullfile(catdir)),'WARNING');
 end
-
-% start cat with different default file
-catdir = fileparts(mfilename('fullpath')); 
-catdef = fullfile(catdir,'cat_defaults.m');
 
 % check that mex-files on MAC are not blocked
 try
